// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ingest Batch Events Actions .getIngestBatchEvents  by default 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "batch_ids": undefined,
        "cursor": undefined,
        "error_types": undefined,
        "events": undefined,
        "from": "2019-09-10T15:46:20Z",
        "per_page": undefined,
        "to": "2019-09-16T15:46:20Z",
      },
      "showErrorAlert": false,
      "url": "v1/events/ingest",
    },
    "type": "GET_INGEST_BATCH_EVENTS",
  },
]
`;

exports[`Ingest Batch Events Actions .getIngestBatchEvents  with batch ids 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "batch_ids": "8c4b19fb-07a2-42cb-84f7-3ab09a8049e0",
        "cursor": undefined,
        "error_types": undefined,
        "events": undefined,
        "from": "2019-09-10T15:46:20Z",
        "per_page": undefined,
        "to": "2019-09-16T15:46:20Z",
      },
      "showErrorAlert": false,
      "url": "v1/events/ingest",
    },
    "type": "GET_INGEST_BATCH_EVENTS",
  },
]
`;

exports[`Ingest Batch Events Actions .getIngestBatchEvents  with cursor 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "batch_ids": undefined,
        "cursor": "ABCDEFGHIJK",
        "error_types": undefined,
        "events": undefined,
        "from": "2019-09-10T15:46:20Z",
        "per_page": undefined,
        "to": "2019-09-16T15:46:20Z",
      },
      "showErrorAlert": false,
      "url": "v1/events/ingest",
    },
    "type": "GET_INGEST_BATCH_EVENTS",
  },
]
`;

exports[`Ingest Batch Events Actions .getIngestBatchEvents  with error status 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "batch_ids": undefined,
        "cursor": undefined,
        "error_types": "validation",
        "events": undefined,
        "from": "2019-09-10T15:46:20Z",
        "per_page": undefined,
        "to": "2019-09-16T15:46:20Z",
      },
      "showErrorAlert": false,
      "url": "v1/events/ingest",
    },
    "type": "GET_INGEST_BATCH_EVENTS",
  },
]
`;

exports[`Ingest Batch Events Actions .getIngestBatchEvents  with page size 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "batch_ids": undefined,
        "cursor": undefined,
        "error_types": undefined,
        "events": undefined,
        "from": "2019-09-10T15:46:20Z",
        "per_page": 100,
        "to": "2019-09-16T15:46:20Z",
      },
      "showErrorAlert": false,
      "url": "v1/events/ingest",
    },
    "type": "GET_INGEST_BATCH_EVENTS",
  },
]
`;

exports[`Ingest Batch Events Actions .getIngestBatchEvents  with success status 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "batch_ids": undefined,
        "cursor": undefined,
        "error_types": undefined,
        "events": "success",
        "from": "2019-09-10T15:46:20Z",
        "per_page": undefined,
        "to": "2019-09-16T15:46:20Z",
      },
      "showErrorAlert": false,
      "url": "v1/events/ingest",
    },
    "type": "GET_INGEST_BATCH_EVENTS",
  },
]
`;
